<resources>
    <string name="app_name">Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_us">About Us...</string>
    <string name="aboutus">AboutUs</string>
    <string name="aboutusimage">AboutUsImage</string>
    <string name="rezaimage">RezaImage</string>
    <string name="iraniimage">IraniImage</string>
    <string name="mercedeh_irani">Mercedeh Irani</string>
    <string name="reza_ghahremani">Reza Ghahremani</string>
    <string name="_95461027">95461027</string>
    <string name="_96521425">96521425</string>
    <string name="QRImage">qr_code</string>
    <string name="qr_for_out_trello_tasks">QR for out Trello Tasks</string>
</resources>